added another td to nest form added button witin form both are appearing. Additional changes to button needs to be done to say delete. clicking on the button brings you to the correct urls id /delete but says cannot post

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,13 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-              <form method="POST" action="/urls/9sm5xK/delete"></form>
+              <td>
+              <!-- Commenting is different in ejs -->
+              <!-- Bootstrap JS -->
+                <form method="POST" action="/urls/<%= id %>/delete"> 
+                  <button></button>
+                </form>
+              </td>
             </tr>
           <% } %>
         </tbody>
