--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,9 +20,9 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
-      </div>
-      <div class="card-footer text-muted"></div>
-    </div>
+        <!-- post method to redirect to update, similar to what we did with delete -->
+        <form method="POST" action="/urls/<%= id %>/update"></form>
+          
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
