added edit link. for now it's under the delete, but we will learn styling next week and I confirmed the styling is not important for now

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,6 +33,10 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <!-- edit link for each URL -->
+              <td>
+                <a href="/urls/<%= id %>/show">Edit</a>
+              </td>
               <!-- nesting method in td -->
               <td>
               <!-- id nested in site redirect -->
