clicking on edit now brings you to the id page to with the edit option provided on urls_show.ejs

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -35,7 +35,7 @@
               <td><%= urls[id] %></td>
               <!-- edit link for each URL -->
               <td>
-                <a href="/urls/<%= id %>/show">Edit</a>
+                <a href="/urls/<%= id %>">Edit</a>
               </td>
               <!-- nesting method in td -->
               <td>
