--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,6 +16,12 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <form method="POST" action="" class="form-inline">
+          <!--button to submit-->
+          <label for="username" class="mr-2">username</label>
+            <input type="text" class="form-control" id="username" name="username" value="" required>
+          <button type="submit">Login</button>
+        </form>
       </div>
     </div>
   </nav>
