--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,13 +20,15 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
+      <div class="card-body">
         <!-- post method to redirect to update, similar to what we did with delete -->
-        
-        <form method="POST" action="/urls/<%= id %>/update">
+        <form method="POST" action="/urls/<%= id %>/update" class="form-inline">
           <!--button to submit-->
+          <label for="newURL" class="mr-2">New URL:</label>
+            <input type="text" class="form-control" id="newURL" name="newURL" value="<%= longURL %>" required>
           <button type="submit">Submit</button>
         </form>
-          
+      </div>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
