--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -22,7 +22,7 @@
         <form method="POST" action="/logout" class="form-inline">
           <!--button to submit-->
           <label for="email" class="mr-2">Logged in as:<%= user.email %></label>
-          <!--value needs to be empty for user input, now changed for <%= username %> to display inputted username-->
+          <!--value needs to be empty for user input, now changed for  to display inputted username-->
             
           <button type="submit">Logout</button>
         </form>
@@ -30,9 +30,9 @@
           <!--login form-->
         <form method="POST" action="/login" class="form-inline">
           <!--button to submit-->
-          <label for="username" class="mr-2">username</label>
-          <!--value needs to be empty for user input, now changed for <%= username %> to display inputted username-->
-            <input type="text" class="form-control" id="username" name="username" value="" required>
+          <label for="email" class="mr-2">Email</label>
+          <!--value needs to be empty for user input, now changed for  to display inputted username-->
+            <input type="text" class="form-control" id="email" name="email" value="" required>
           <button type="submit">Login</button>
         </form>
         <% } %>
