--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -29,11 +29,10 @@
         <% } else { %>
           <!--login form-->
         <form method="POST" action="/login" class="form-inline">
-          <!--button to submit-->
-          <label for="email" class="mr-2">Email</label>
-          <!--value needs to be empty for user input, now changed for  to display inputted username-->
-            <input type="text" class="form-control" id="email" name="email" value="" required>
           <button type="submit">Login</button>
+        </form>
+        <form method="POST" action="/register" class="form-inline">
+          <button type="submit">Register</button>
         </form>
         <% } %>
       </div>
