--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,7 +32,8 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <!--refactor as it was showing object object-->
+              <td><%= urls[id].longURL %></td>
               <!-- edit link for each URL -->
               <td>
                 <a href="/urls/<%= id %>">Edit</a>
