--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,7 +29,7 @@
           </tr>
         </thead>
         <tbody>
-          <% for (let id in urls) { %>
+          <% for (let id in Object.keys(urls)) { %>
             <tr>
               <td><%= id %></td>
               <!--refactor as it was showing object object-->
