--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,25 +25,26 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
-          <% for (let id in Object.keys(urls)) { %>
+          <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
               <!--refactor as it was showing object object-->
               <td><%= urls[id].longURL %></td>
               <!-- edit link for each URL -->
               <td>
-                <a href="/urls/<%= id %>">Edit</a>
+                <a class = "btn btn-warning" href="/urls/<%= id %>">Edit</a>
               </td>
               <!-- nesting method in td -->
               <td>
               <!-- id nested in site redirect -->
                 <form method="POST" action="/urls/<%= id %>/delete"> 
                   <!-- button for each item in the column -->
-                  <button type="submit">Delete</button>
+                  <button class = "btn btn-danger" type="submit">Delete</button>
                 </form>
               </td>
             </tr>
