--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,7 @@ include a form with an email address and password field-->
     <title>Login page</title>
   </head>
   <body>
+    <%- include('partials/_header') %>
     <form method="POST" action="/login" class="form-inline">
       <label for="email" class="mr-2">email</label>
         <input type="email" class="form-control" name="email" value="" required>
